--- a/src/styles/ftva/_section-teaser-card.scss
+++ b/src/styles/ftva/_section-teaser-card.scss
@@ -1,28 +1,25 @@
 .ftva.section-teaser-card {
     align-items: flex-start;
-    overflow-y: visible;
+    overflow-y: auto;
     flex-wrap: nowrap;
-    padding-top: 100px;
-
-    // display the sectionTitle here if passed to component
-    &:before {
-        @include ftva-card-title-1;
-        color: $accent-blue;
-    }
-
+    padding-top: 25px;
 
     .card {
         width: calc((100% / 3) - 22px);
         flex-shrink: 0;
-        min-width: 300px;
+        min-width: 298px;
 
         // Hovers
         @media #{$has-hover} {
             &:hover {
-                transform: scale(1.05);
                 border: 2px solid $accent-blue;
                 box-shadow: 0 10px 17px rgba(0,0,0,0.1)
             }
         }
     }
+}
+.ftva.section-teaser-card-title {
+    @include ftva-card-title-1;
+    padding-top: 60px;
+    color: $accent-blue;
 }
